--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	<H1>Name & Surname Portfolio</H1>
+	<H1>Tilly Richards Portfolio</H1>
 	<h2>Proposal</h2>
+	<a herf="https://drive.google.com/file/d/161quA7aoLwhiHWeR4pYyb76taCMS4468/view?usp=sharing"> Tilly's inquiry </a>
 	<p>embed code here</p>
 	<h2>Design</h2>
 	<p>embed code here</p>
